--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
 
     <footer>
-        <!-- Rodapé com redes sociais e contato, etc -->
+        <!-- Rodapé com redes sociais e contato, etc. -->
     </footer>
     
 </body>
