--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
         <!-- Aqui pode ter o logo com menu para as seções -->
     </header>
 
-    <section>
-        <!-- Coloquei só uma agora, mas a gente vai adicionando -->
+    <section id="quem-somos">
+        <h1></h1>Quem somos</h1>
+        <p>A 4Food é uma grande rede com os melhores supermercados que possui um sistema de compras e entregas por aplicativo. 
+            Nós facilitamos a sua vida! Entregamos nas principais cidades do Brasil e em breve expandiremos o serviço para todo o território nacional.
+        </p>
     </section>
 
-    <footer>
-        <!-- Rodapé com redes sociais e contato, etc -->
+    <footer id="footer">
+        <h2>Redes sociais</h2>
+        <div>
+            <a href="http://facebook.com"><img src="icon-facebook.png"></a>
+            <a href="http://twitter.com"><img src="icon-twitter.png"></a>
+            <a href="http://linkedin.com"><img src="icon-linkedin.png"></a>
+            <a href="http://instagram.com"><img src="icon-instagram.png"></a>
+        </div>
     </footer>
     
 </body>
