--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="estilo.css" media="screen"  /> <!-- Link pro arquivo CSS -->
+    <link rel="stylesheet" type="text/css" href="styles.css" media="screen"  /> <!-- Link pro arquivo CSS -->
     <title>4Food - Sua rede de compras e entregas</title> <!-- Podem mudar isso se quiser, foi a primeira coisa que veio na minha cabeça hahah -->
 </head>
 <body>
@@ -17,6 +17,20 @@
         <p>A 4Food é uma grande rede com os melhores supermercados que possui um sistema de compras e entregas por aplicativo. 
             Nós facilitamos a sua vida! Entregamos nas principais cidades do Brasil e em breve expandiremos o serviço para todo o território nacional.
         </p>
+    </section>
+
+    <section id="parceiros">
+        <h2>Estabelecimentos Parceiros</h2>
+        <img src="habibs.png">
+        <img src="mcdonalds.png">
+        <img src="bobs.png">
+        <img src="subway.png">
+        <img src="dominos.png">
+        <img src="giraffas.png">
+        <img src="pizza-hut.png">
+        <img src="china-in-box.png">
+        <img src="taco-bell.png">
+        <img src="ben-and-jerrys.png">
     </section>
 
     <footer id="footer">
