Adicionei estilos na quem somos e redes sociais

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section id="quem-somos">
-        <h1></h1>Quem somos</h1>
+        <h1>Quem somos</h1>
         <p>A 4Food é uma grande rede com os melhores supermercados que possui um sistema de compras e entregas por aplicativo. 
             Nós facilitamos a sua vida! Entregamos nas principais cidades do Brasil e em breve expandiremos o serviço para todo o território nacional.
         </p>
@@ -35,7 +35,7 @@
 
     <footer id="footer">
         <h2>Redes sociais</h2>
-        <div>
+        <div id="redes-sociais">
             <a href="http://facebook.com"><img src="icon-facebook.png"></a>
             <a href="http://twitter.com"><img src="icon-twitter.png"></a>
             <a href="http://linkedin.com"><img src="icon-linkedin.png"></a>
