--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="estilo.css" media="screen"  /> <!-- Link pro arquivo CSS -->
-    <title>4Food - Sua rede de compras e entregas</title> <!-- Podem mudar isso se quiser, foi a primeira coisa que veio na minha cabeça hahah -->
+    <link rel="stylesheet" type="text/css" href="estilo.css" media="screen" />
+    <!-- Link pro arquivo CSS -->
+    <title>4Food - Sua rede de compras e entregas</title>
+    <!-- Podem mudar isso se quiser, foi a primeira coisa que veio na minha cabeça hahah -->
 </head>
+
 <body>
     <header>
         <!-- Aqui pode ter o logo com menu para as seções -->
@@ -14,9 +18,24 @@
 
     <section id="quem-somos">
         <h1></h1>Quem somos</h1>
-        <p>A 4Food é uma grande rede com os melhores supermercados que possui um sistema de compras e entregas por aplicativo. 
-            Nós facilitamos a sua vida! Entregamos nas principais cidades do Brasil e em breve expandiremos o serviço para todo o território nacional.
+        <p>A 4Food é uma grande rede com os melhores supermercados que possui um sistema de compras e entregas por aplicativo. Nós facilitamos a sua vida! Entregamos nas principais cidades do Brasil e em breve expandiremos o serviço para todo o território
+            nacional.
         </p>
+    </section>
+
+    <section id="fale-conosco">
+        <h1>Fale conosco!</h1>
+        <form action="">
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome">
+            <label for="email">E-mail:</label>
+            <input type="email" name="email">
+            <label for="mensagem">Mensagem:</label>
+            <input type="text" name="mensagem">
+            <input type="submit" value="Enviar">
+        </form>
+
+
     </section>
 
     <footer id="footer">
@@ -28,6 +47,7 @@
             <a href="http://instagram.com"><img src="icon-instagram.png"></a>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
