Fiz e estilizei o Header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <header>
-        <!-- Aqui pode ter o logo com menu para as seções -->
+        <img src="4Food.png">
+        <h1>4Food</h1>
+         <nav>
+            <a href="#quem-somos">Quem Somos</a>
+            <a href="#parceiros">Estabelecimentos Parceiros</a>
+            <a href="#fale-conosco">Fale Conosco</a>
+        </nav>        
+        <img src="background-img.png">
     </header>
 
     <section id="quem-somos">
