--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <input type=“email” name=“email”>
                 <label for=“mensagem”>Mensagem:</label>
                 <input type=“text” name=“mensagem”>
-                <input type=“submit” value=“Enviar”>
+                <button type=“button”>Enviar</button>
             </form>
     </section>
 
